[package]
name = "SolaMe"
version = "0.1.0"
description = "A Solana App"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sola_me"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
#anchor-lang = "0.19.0"
solana-program="1.6.9"
thiserror="1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
#anchor-spl = {version = "0.19.0"}
